@@ -1,3 +1,8 @@
+2011-09-06 Borut Razem <borut.razem AT gmail.com>
+
+	* debugger/mcs51/sdcdb.h, src/SDCCsystem.c, src/pic14/glue.c:
+	  fixed WIN64 warnings: cast from pointer to integer of different size
+
 2011-09-06 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
 	* src/SDCCralloc.hpp:
